Fix responsive view of the icon cards on small screens

--- a/guide/src/pages/visuals/icons/_IconGrid.module.scss
+++ b/guide/src/pages/visuals/icons/_IconGrid.module.scss
@@ -16,7 +16,7 @@ $tileHeight: 144px;
   border-top: 1px solid $ca-border-color;
   padding-top: $ca-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 160px);
+  grid-template-columns: repeat(auto-fill, $tileWidth);
 }
 
 .iconTile {
